Closed Bug 1879386 Opened 2 years ago Closed 2 years ago

Checkboxes and radio buttons do not respect SelectedText color in Windows 10 dark HCM

Categories

(Firefox :: Theme, defect, P3)

defect

Tracking

()

VERIFIED FIXED
124 Branch
Accessibility Severity s3
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- wontfix
firefox123 --- wontfix
firefox124 --- verified
firefox125 --- verified

People

(Reporter: tgiles, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: access, regression)

Attachments

(2 files)

Attached image image.png

Haven't checked on Windows 11 as I don't have a machine for that yet, but our checkboxes and radio buttons do not change their color to the SelectedText system color and instead show the default primary teal color in Windows HCM dark themes. For some reason if I select Windows High Contrast White, the checkboxes and radio buttons use the SelectedText color. Not entirely sure what is going on in this case.

Set release status flags based on info from the regressing bug 1867769

:emilio, since you are the author of the regressor, bug 1867769, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Summary: Checkboxes do not respect SelectedText color in Windows 10 dark HCM → Checkboxes and radio buttons do not respect SelectedText color in Windows 10 dark HCM

Not going to claim expertise here, but it looks like we're setting the SelectedItem color in the GenericDarkColor function to the primary teal color seen in the screenshot. Not sure how we would change this without potentially breaking the generic dark color for other platforms if I understand the code correctly.

Really regressed by bug 1789214.

Flags: needinfo?(emilio)
Regressed by: 1789214
No longer regressed by: 1867769
Assignee: nobody → emilio

This seems hard to reliably test... Basically, this forces all windows
HCM to use "light" system colors for non-native drawing, the same way we
do for system color resolution.

Accessibility Severity: --- → s3

Emilio, can we please get Priority/Severity settings applied here?

Flags: needinfo?(emilio)
Severity: -- → S3
Flags: needinfo?(emilio)
Priority: -- → P3
Duplicate of this bug: 1879805
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/995a3050d70c Make sure we respect the "must use light colors" bit in non-native theme drawing. r=morgan
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Flags: qe-verify+

I was able to reproduce the issue on Win10x64 using Firefox build 122.0.
Verified as fixed on Win10x64 using Firefox build 124.0b2 and 125.0a1. (Checked that they are correctly displayed on Win11 also)

Status: RESOLVED → VERIFIED
Regressions: 1886731
No longer duplicate of this bug: 1879805
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: