Bug 1879386 - Make sure we respect the "must use light colors" bit in non-native theme drawing. r=morgan

This seems hard to reliably test... Basically, this forces all windows
HCM to use "light" system colors for non-native drawing, the same way we
do for system color resolution.

Differential Revision: https://phabricator.services.mozilla.com/D201205